kube/fava/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fava
spec:
  selector:
    app: fava
  ports:
    - port: 443
      targetPort: 5000
