kube/fava/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - fava.gilman.io
      secretName: fava-tls
  rules:
    - host: fava.gilman.io
      http:
        paths:
          - path: /
            backend:
              serviceName: fava
              servicePort: 443
